# GrabAPass

./: README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  Cargo.toml
backend/migrations/: 20260306103000_create_users_table.sql  20260306104000_create_events_table.sql  20260308100000_create_venue_tables.sql
backend/src/: handlers_auth.rs  main.rs  middleware.rs  models.rs
backend/src/db/: models.rs
backend/src/handlers/: auth.rs  event.rs  mod.rs  venue.rs
backend/src/middleware/: auth.rs
backend/src/repositories/: auth_repository.rs  event_repository.rs  mod.rs  venue_repository.rs
backend/src/routes/: auth.rs  event.rs  health.rs  mod.rs  venue.rs
backend/src/services/: auth_service.rs  event_service.rs  mod.rs  venue_service.rs
frontend/: angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.config.ts  app.html  app.routes.ts  app.scss  app.ts
frontend/src/app/core/auth/: auth-guard.ts  auth-interceptor.ts  auth.ts
frontend/src/app/core/services/: event.service.ts  venue.service.ts
frontend/src/app/features/auth/login/: login.html  login.scss  login.ts
frontend/src/app/features/auth/register/: register.html  register.scss  register.ts
frontend/src/app/features/events/detail/: event-detail.html  event-detail.scss  event-detail.ts
frontend/src/app/features/events/home/: home.html  home.scss  home.ts
frontend/src/app/features/organizer/create-event/: create-event.scss
frontend/src/app/shared/models/: event.ts  venue.ts
(+16 files in other folders)
